2015-03-28  Mike Frysinger  <vapier@gentoo.org>

	* erc32.c (mec_read): Delete parenthesis around return statement.
	(mec_write, read_uart, rtc_counter_read, gpt_counter_read, memory_read,
	memory_write, get_mem_ptr, sis_memory_write, sis_memory_read): Likewise.
	* exec.c (sub_cc, add_cc, add32, dispatch_instruction, fpexec, chk_asi,
	execute_trap, check_interrupts): Likewise.
	* float.c (get_accex): Likewise.
	* func.c (batch, limcalc, exec_cmd, disp_fpu, now, wait_for_irq,
	check_bpt, bfd_load, get_time): Likewise.
	* interf.c (run_sim, sim_write, sim_read): Likewise.
	* sis.c (run_sim): Likewise.

2015-03-24  Mike Frysinger  <vapier@gentoo.org>

	* interf.c (sim_set_callbacks, sim_size, sim_trace): Delete.

2015-03-17  Jiri Gaisler  <jiri@gaisler.se>

	* func.c (exec_cmd): Silence compiler warnings when calling system().
	(batch): Replace fgets() with getline().

2015-03-17  Jiri Gaisler  <jiri@gaisler.se>

	* func.c (show_stat): Print simulation time in portable long long
	format.
	* help.c (usage): Update usage help print-out.
	* sis.c (run_sim): Increase debug level with -v. Also print
	simulation time in portable long long format.
	* sis.h: Use stdint.h for portable 32- and 64-bit ints.

2015-03-16  Mike Frysinger  <vapier@gentoo.org>

	* config.in, configure: Regenerate.

2015-03-16  Jiri Gaisler  <jiri@gaisler.se>

	* Makefile.in (end, end.h): Remove target rules.
	(clean): Remove end and end.h.
	(erc32.o, exec.o, float.o, func.o, help.o, interf.o, sis.o): Delete
	rules.
	* configure, config.in: Regenerate.
	* configure.ac: Use SIM_AC_OPTION_HOSTENDIAN
	* end.c: Delete.
	* erc32.c: Remove end.h include.
	* exec.c: Remove end.h include. Use HOST_LITTLE_ENDIAN.
	* func.c, sis.c: Likewise.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (SIM_RUN_OBJS): Set to sis.o.

2015-03-14  Mike Frysinger  <vapier@gentoo.org>

	* configure.ac (AC_CHECK_HEADERS): Delete.
	* aclocal.m4, configure: Regenerate.

2015-02-22  Jiri Gaisler  <jiri@gaisler.se>
